// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`validateICalendarJson should handle missing required fields as invalid 1`] = `
[
  {
    "instancePath": "$",
    "keyword": "type",
    "message": "Provided JSON data is not a valid ICalBaseData object.",
    "params": {
      "type": "ICalBaseData",
    },
    "schemaPath": "$",
  },
]
`;

exports[`validateICalendarJson should return invalid result for invalid date/datetime formats 1`] = `
[
  {
    "instancePath": "/events/0/allDayStart",
    "keyword": "format",
    "message": "must match format "date"",
    "params": {
      "format": "date",
    },
    "schemaPath": "#/definitions/allDayEvent/properties/allDayStart/format",
  },
  {
    "instancePath": "/events/0",
    "keyword": "required",
    "message": "must have required property 'start'",
    "params": {
      "missingProperty": "start",
    },
    "schemaPath": "#/definitions/timedEvent/required",
  },
  {
    "instancePath": "/events/0",
    "keyword": "required",
    "message": "must have required property 'end'",
    "params": {
      "missingProperty": "end",
    },
    "schemaPath": "#/definitions/timedEvent/required",
  },
  {
    "instancePath": "/events/0",
    "keyword": "oneOf",
    "message": "must match exactly one schema in oneOf",
    "params": {
      "passingSchemas": null,
    },
    "schemaPath": "#/oneOf",
  },
]
`;

exports[`validateICalendarJson should return invalid result for invalid date/datetime formats 2`] = `
[
  {
    "instancePath": "/events/0",
    "keyword": "required",
    "message": "must have required property 'allDayStart'",
    "params": {
      "missingProperty": "allDayStart",
    },
    "schemaPath": "#/definitions/allDayEvent/required",
  },
  {
    "instancePath": "/events/0/start",
    "keyword": "format",
    "message": "must match format "date-time"",
    "params": {
      "format": "date-time",
    },
    "schemaPath": "#/definitions/timedEvent/properties/start/format",
  },
  {
    "instancePath": "/events/0/end",
    "keyword": "format",
    "message": "must match format "date-time"",
    "params": {
      "format": "date-time",
    },
    "schemaPath": "#/definitions/timedEvent/properties/end/format",
  },
  {
    "instancePath": "/events/0",
    "keyword": "oneOf",
    "message": "must match exactly one schema in oneOf",
    "params": {
      "passingSchemas": null,
    },
    "schemaPath": "#/oneOf",
  },
]
`;
